# distributed-inference-router

./: .gitignore  README.md
benchmarks/: analyze.py  load_test.py  pyproject.toml
benchmarks/scenarios/: baseline.yaml  failover.yaml  saturation.yaml
deploy/: Dockerfile.mock  Dockerfile.router  docker-compose.mock.yml  docker-compose.yml  prometheus.yml  router-config-gpu.yaml  router-config.yaml
deploy/grafana/dashboards/: router.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
mock-backend/: main.py  requirements.txt
router-core/: Cargo.toml
router-core/src/: backend.rs  backpressure.rs  circuit_breaker.rs  config.rs  health.rs  main.rs  metrics.rs  proxy.rs  server.rs
router-core/src/routing/: latency_aware.rs  least_connections.rs  mod.rs  prefix_cache.rs  round_robin.rs
tests/: requirements.txt
tests/failover/: test_failover.py
tests/integration/: test_routing.py
