[package]
name = "inference-router"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bytes = "1"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
prometheus-client = "0.22"
async-trait = "0.1"
rand = "0.8"
sha2 = "0.10"
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tokio-test = "0.4"
